; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_io_callback.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_io_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i8*)* @io_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @io_callback(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @assert(i32* %12)
  %14 = load i32*, i32** %9, align 8
  %15 = call i32 @assert(i32* %14)
  %16 = load i32*, i32** %9, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @handle_revents(i32* %16, i32 %17)
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @varlink_process(i32* %19)
  ret i32 1
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @handle_revents(i32*, i32) #1

declare dso_local i32 @varlink_process(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
